layout and stying done.

--- a/anarock.html
+++ b/anarock.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <title>Anarock Application</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./src/output.css" rel="stylesheet">
@@ -97,7 +100,7 @@
                 <p class="text-2xl font-bold">Project Overview</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
-            <p class="text-gray-400 text-center lg:w-4/5">Anagrow is a B2B Platform for channel partners(brokers) to view listing of properties and sell them to clients. App allows CPs to manage all their clients with the help of CRM which is inbuild in the app and also after selling the property CPs can manage all the finance proceeding in the app itself with the help of CM(commission management). CPs get exciting offers and early commission on the selling of properties with Seal of Trust.</p>
+            <p class="text-gray-400 text-center lg:w-4/5">Anarock is a B2B Platform for channel partners(brokers) to view listing of properties and sell them to clients. App allows CPs to manage all their clients with the help of CRM which is inbuild in the app and also after selling the property CPs can manage all the finance proceeding in the app itself with the help of CM(commission management). CPs get exciting offers and early commission on the selling of properties with Seal of Trust.</p>
         </div>
 
         <!--  -->
@@ -116,7 +119,7 @@
             </div>
 
             <div class="flex flex-col items-center w-full">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images//icons/tools.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Tools</p>
                 <p class="font-bold text-center mt-2">Figma, FigJam, Clickup & Google Meet</p>
             </div>
@@ -135,15 +138,15 @@
     <!-- Role & Responsibilities -->
     <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col gap-8 justify-center items-center">
-            <div class="flex flex-col gap-2 items-center">
-                <p class="text-3xl font-bold">Roles and Responsibilities</p>
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
+                <p class="text-2xl font-bold">Roles and Responsibilities</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+            <p class="text-gray-400">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
 
-            <div class="flex flex-wrap gap-2 items-center text-center justify-center">
+            <div class="flex flex-wrap gap-2">
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Research</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Wireframing</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Strategy</span>
@@ -162,8 +165,8 @@
     <!-- Problem Statement -->
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Problem Statement</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -217,8 +220,8 @@
     <div class="flex flex-col gap-8 px-4">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8 lg:w-3/5 lg:m-auto lg:px-0">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8 lg:w-3/5 lg:m-auto lg:px-0">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Final Flows & Designs</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -255,7 +258,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Channel Partner(CP)/Organisation Onboarding</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Channel Partner(CP)/Organisation Onboarding</h3>
                         <p class="text-gray-400 font-light">First time user will onboard by using number and OTP following with the filling personal details and then continues by choosing between he owns an organisation or he is individual CP. CP also has to fll his organisation details like RERA details.</p>
 
                         <div class="w-full mt-4">
@@ -269,7 +272,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Digital Visiting Card</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Digital Visiting Card</h3>
                         <p class="text-gray-400 font-light">Digital Visiting Card is a CP's visiting card which he can share with the potential clients to let them know that he is with the organisation or he has official RERA ID. Here user can create the visiting card by filling all the necessary details and then choose of the templete to select his visiting card. User can also upload the existing visiting card by uploading it.</p>
 
                         <div class="w-full mt-4">
@@ -283,7 +286,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Project - Filters, Listing, Project Details</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Project - Filters, Listing, Project Details</h3>
                         <p class="text-gray-400 font-light">CPs can view the Project Listing to view projects toview project details and offers that comes along with projects which they can avail after selling the project. Users can also filter the projects according to their need and also sort the listing to view accordingly. In project details they can share the project details with the client for them to understand in & out of the project.</p>
 
                         <div class="w-full mt-4">
@@ -307,7 +310,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Profile</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Profile</h3>
                         <p class="text-gray-400 font-light">Profile contains all the details about the CP which he can edit at any given time. CP can change Profile Pictue from here and verify his email.</p>
 
                         <div class="w-full mt-4">
@@ -321,7 +324,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">My Team</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">My Team</h3>
                         <p class="text-gray-400 font-light">My Team in bottom navigation will only be visible to organisation profile. It will contain all the team members. Team owner and admin can edit the details of team members.</p>
 
                         <div class="w-full mt-4">
@@ -340,15 +343,15 @@
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Conclusion</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
+            <p class="text-gray-400">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
 
-            <p class="text-gray-400 text-center">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
+            <p class="text-gray-400">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
 
         </div>
     </div>
@@ -419,7 +422,7 @@
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8 border-t-2 border-gray-800">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest in my work!</p>
-            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="#" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="./images/general/Résumé_SumitNikhare.pdf" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
