--- a/invest.html
+++ b/invest.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>sumit.design</title>
+    <title>Invest iOS Application</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
 
     <meta charset="UTF-8">
@@ -119,7 +119,7 @@
             </div>
 
             <div class="flex flex-col items-center w-full">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/icons/tools.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Tools</p>
                 <p class="font-bold text-center mt-2">Figma, FigJam, Clickup & Google Meet</p>
             </div>
@@ -138,15 +138,15 @@
     <!-- Role & Responsibilities -->
     <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col gap-8 justify-center items-center">
-            <div class="flex flex-col gap-2 items-center">
-                <p class="text-3xl font-bold">Roles and Responsibilities</p>
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
+                <p class="text-2xl font-bold">Roles and Responsibilities</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+            <p class="text-gray-400">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
 
-            <div class="flex flex-wrap gap-2 items-center text-center justify-center">
+            <div class="flex flex-wrap gap-2">
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Research</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Wireframing</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Strategy</span>
@@ -165,13 +165,13 @@
     <!-- Problem Statement -->
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Problem Statement</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
-            <p class="text-gray-400 text-center lg:w-4/5">Startups often face significant challenges in securing the funding they need to scale, while potential investors struggle to find emerging ventures that align with their interests and investment goals. The current landscape lacks a centralized, user-friendly platform that connects startups seeking funding with investors looking for new opportunities. Startups need a seamless way to present their ideas, progress, and funding requirements, while investors require an intuitive interface to discover, evaluate, and invest in promising ventures.</p>
-            <p class="text-gray-400 text-center lg:w-4/5">The goal of this project is to design an app that bridges this gap, allowing startups to easily post their projects for potential investors to see, and enabling investors to browse, evaluate, and invest in various startups from a single platform. The design should focus on a streamlined user experience, transparency, and fostering trust between both parties.</p>
+            <p class="text-gray-400">Startups often face significant challenges in securing the funding they need to scale, while potential investors struggle to find emerging ventures that align with their interests and investment goals. The current landscape lacks a centralized, user-friendly platform that connects startups seeking funding with investors looking for new opportunities. Startups need a seamless way to present their ideas, progress, and funding requirements, while investors require an intuitive interface to discover, evaluate, and invest in promising ventures.</p>
+            <p class="text-gray-400">The goal of this project is to design an app that bridges this gap, allowing startups to easily post their projects for potential investors to see, and enabling investors to browse, evaluate, and invest in various startups from a single platform. The design should focus on a streamlined user experience, transparency, and fostering trust between both parties.</p>
 
         </div>
     </div>
@@ -182,8 +182,8 @@
     <div class="flex flex-col gap-8 px-4">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8 lg:w-3/5 lg:m-auto lg:px-0">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8 lg:w-3/5 lg:m-auto lg:px-0">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Flows and UI Designs</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -210,10 +210,10 @@
         <div class="grid grid-cols-1 gap-8 lg:w-3/5 lg:m-auto lg:px-0">
 
             <!-- Onboarding -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Onboarding</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Onboarding</h3>
                         <p class="text-gray-400 font-light mt-3">The onboarding process introduces users to the app’s purpose and functionality, guiding both startup founders and potential investors through tailored experiences. For founders, the onboarding highlights steps to post their startup, while for investors, it explains how to browse and evaluate startups for funding. The design must ensure clarity, reduce friction, and set expectations, using a combination of visuals and short descriptions to ease users into the platform. Features like social login and quick-start guides could help reduce onboarding time and improve user retention.</p>
 
                         <div class="w-full mt-4">
@@ -224,10 +224,10 @@
             </div>
 
             <!-- Homepage -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Homepage</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Homepage</h3>
                         <p class="text-gray-400 font-light mt-3">The homepage serves as the primary interface for investors, presenting a curated list of startups seeking funding. Startups are displayed in a card-based or list format, each featuring key information such as the startup name, industry, funding progress, and a brief description. Investors can easily browse, filter, and search for startups based on categories such as industry, funding stage, or location.</p>
                         <p class="text-gray-400 font-light">Each startup card provides a quick overview with the option to tap for more detailed information. Upon selection, users can view comprehensive startup profiles, including founders' details, pitch decks, current investors, and financial projections. The goal is to create a seamless, informative experience that encourages discovery and engagement, while offering startups the opportunity to showcase their potential.</p>
 
@@ -239,10 +239,10 @@
             </div>
 
             <!-- Profile -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Profile</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Profile</h3>
                         <p class="text-gray-400 font-light mt-3">The profile section is essential for establishing credibility and trust within the app, allowing both investors and startup owners to showcase their backgrounds, expertise, and objectives. The investor profile provides a comprehensive view of their investment history, interests, and areas of expertise. It includes personal information such as the investor's name, profile picture, and a brief bio highlighting their professional background and investment philosophy. Additionally, the profile features a list of past investments, detailing the startup names, amounts invested, and the outcomes of those investments, as well as a section for preferred industries to aid in personalized startup recommendations. Connection options for direct messaging or scheduling meetings with startup owners promote networking and collaboration.</p>
 
                         <div class="w-full mt-4">
@@ -260,15 +260,15 @@
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Conclusion</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
+            <p class="text-gray-400">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
 
-            <p class="text-gray-400 text-center">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
+            <p class="text-gray-400">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
 
         </div>
     </div>
@@ -339,7 +339,7 @@
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8 border-t-2 border-gray-800">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest in my work!</p>
-            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="#" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="./images/general/Résumé_SumitNikhare.pdf" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
