--- a/samasta.html
+++ b/samasta.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>sumit.design</title>
+    <title>Samasta Application & Dashboard</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
 
     <meta charset="UTF-8">
@@ -121,7 +121,7 @@
             </div>
 
             <div class="flex flex-col items-center w-full">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/icons/tools.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Tools</p>
                 <p class="font-bold text-center mt-2">Figma, FigJam, Jira, Confluence & Google Meet</p>
             </div>
@@ -140,15 +140,15 @@
     <!-- Role & Responsibilities -->
     <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col gap-8 justify-center items-center">
-            <div class="flex flex-col gap-2 items-center">
-                <p class="text-3xl font-bold">Roles and Responsibilities</p>
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
+                <p class="text-2xl font-bold">Roles and Responsibilities</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+            <p class="text-gray-400">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
 
-            <div class="flex flex-wrap gap-2 items-center text-center justify-center">
+            <div class="flex flex-wrap gap-2">
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Research</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Wireframing</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Strategy</span>
@@ -166,12 +166,12 @@
     <!-- Problem Statement -->
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Problem Statement</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
-            <p class="text-gray-400 text-center lg:w-4/5">Primary healthcare facilities often struggle with manual processes, unstructured patient flow, and fragmented data systems. These issues lead to long wait times, inconsistent patient records, stock mismanagement, and poor visibility into community outreach efforts. Higher-level officials face challenges in accessing real-time data, monitoring health trends, and making informed decisions due to the lack of integrated reporting and oversight tools.</p>
+            <p class="text-gray-400">Primary healthcare facilities often struggle with manual processes, unstructured patient flow, and fragmented data systems. These issues lead to long wait times, inconsistent patient records, stock mismanagement, and poor visibility into community outreach efforts. Higher-level officials face challenges in accessing real-time data, monitoring health trends, and making informed decisions due to the lack of integrated reporting and oversight tools.</p>
         </div>
 
         <div class="grid grid-cols-1 gap-4">
@@ -214,12 +214,12 @@
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-4">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-4">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Userflow</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
-            <p class="text-gray-400 text-center mt-2 lg:w-4/5">The application's information architecture was redesigned based on user feedback and persona insights. The goal was to ensure that navigation was intuitive, and information was organized in a logical and accessible manner.</p>
+            <p class="text-gray-400 mt-2">The application's information architecture was redesigned based on user feedback and persona insights. The goal was to ensure that navigation was intuitive, and information was organized in a logical and accessible manner.</p>
             
             <div class="w-full mx-auto mt-4">
                 <img src="./images/samasta/userflow_1.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg shadow-md" />
@@ -233,8 +233,8 @@
     <div class="flex flex-col gap-8 px-4">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8 lg:w-3/5 lg:m-auto lg:px-0">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8 lg:w-3/5 lg:m-auto lg:px-0">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Final Solution</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -263,7 +263,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Out Patient Department (OPD)</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Out Patient Department (OPD)</h3>
                         <p class="text-gray-400">This module handles the entire OPD workflow, from patient arrival to consultation and treatment. It integrates queue management, displaying patient status and prioritizing cases based on urgency. Health workers can manage patient flow, assign tokens, and streamline movement between different service points (e.g., consultation, lab tests, pharmacy). The system tracks patients' progress through the OPD process, ensuring efficient and timely care.</p>
 
                         <div class="w-full mt-4">
@@ -277,7 +277,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Inventory Management</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Inventory Management</h3>
                         <p class="text-gray-400">Helps manage medical supplies and resources efficiently. This module tracks stock levels of medicines, vaccines, and equipment in real time, sends alerts for low stock, and generates restocking orders. It also maintains a history of usage, expiration dates, and supply chain updates.</p>
 
                         <div class="w-full mt-4">
@@ -291,7 +291,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Patient Registration</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Patient Registration</h3>
                         <p class="text-gray-400">Streamlines patient intake by allowing health workers to efficiently capture patient details, demographic information, and medical history. This module offers a user-friendly form with auto-fill features, reducing data entry time and ensuring accuracy. Integrated with Aadhaar and other identification systems for quick verifications.</p>
 
                         <div class="w-full mt-4">
@@ -305,7 +305,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Outreach activity</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Outreach activity</h3>
                         <p class="text-gray-400">Enables health workers to plan and track community outreach initiatives. This module includes features for scheduling immunization drives, health camps, and follow-up visits, with integrated reminders. It also logs outreach efforts, records attendance, and syncs data with centralized health records to ensure continuity of care.</p>
 
                         <div class="w-full mt-4">
@@ -319,7 +319,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Dashboard</h3>
+                        <h3 class="ttext-xl lg:text-2xl font-semibold">Dashboard</h3>
                         <p class="text-gray-400">A centralized hub for higher-level officials to monitor OPD performance, track patient visits, and view trends in disease outbreaks and medication prescriptions. This module provides data visualization through charts and graphs, giving insights into resource allocation, patient demographics, and the effectiveness of interventions.</p>
 
                         <div class="w-full mt-4">
@@ -338,15 +338,15 @@
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2 ">
                 <p class="text-2xl font-bold">Conclusion</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
+            <p class="text-gray-400">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
 
-            <p class="text-gray-400 text-center">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
+            <p class="text-gray-400 ">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
 
         </div>
     </div>
@@ -416,7 +416,7 @@
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8 border-t-2 border-gray-800">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest in my work!</p>
-            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="#" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="./images/general/Résumé_SumitNikhare.pdf" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
