--- a/tarp.html
+++ b/tarp.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <title>TARP Design System</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./src/output.css" rel="stylesheet">
@@ -116,7 +119,7 @@
             </div>
 
             <div class="flex flex-col items-center w-full">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/icons/tools.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Tools</p>
                 <p class="font-bold text-center mt-2">Figma, FigJam, Clickup & Google Meet</p>
             </div>
@@ -135,15 +138,15 @@
     <!-- Role & Responsibilities -->
     <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col gap-8 justify-center items-center">
-            <div class="flex flex-col gap-2 items-center">
-                <p class="text-3xl font-bold">Roles and Responsibilities</p>
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
+                <p class="text-2xl font-bold">Roles and Responsibilities</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+            <p class="text-gray-400">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
 
-            <div class="flex flex-wrap gap-2 items-center text-center justify-center">
+            <div class="flex flex-wrap gap-2">
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Research</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Wireframing</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">UX Strategy</span>
@@ -162,8 +165,8 @@
     <!-- Problem Statement -->
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Problem Statement</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -217,8 +220,8 @@
     <div class="flex flex-col gap-8 px-4">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8 lg:w-3/5 lg:m-auto lg:px-0">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8 lg:w-3/5 lg:m-auto lg:px-0">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Components</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -231,7 +234,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Matrics</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Matrics</h3>
                         <p class="text-gray-400 font-light">Metric is quantitative data that you collect & analyze and, hopefully, make better decisions based on this analysis.</p>
 
                         <div class="w-full mt-4">
@@ -245,7 +248,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Data Table</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Data Table</h3>
                         <p class="text-gray-400 font-light">Data tables display information in a grid-like format of rows and columns. They organize information in a way that's easy to scan so that users can look for patterns and develop insights from data.</p>
 
                         <div class="w-full mt-4">
@@ -259,7 +262,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Side Navigation</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Side Navigation</h3>
                         <p class="text-gray-400 font-light">Side navigation lets users navigate the entire content of a product or a section. These can be used for a single level or a multi-level navigation.</p>
 
                         <div class="w-full mt-4">
@@ -273,7 +276,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Filters</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Filters</h3>
                         <p class="text-gray-400 font-light">Filters provide a set of controls to reduce items in a collection based on attributes the user is interested in (e.g., filtering items by creation date). Filters can provide the following functionality: A list of interesting attributes common to items in a collection, and possible values to filter by.</p>
 
                         <div class="w-full mt-4">
@@ -287,7 +290,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">List</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">List</h3>
                         <p class="text-gray-400 font-light">Lists in web/mobile app UI design are galleries of text, images, or card options that can help users choose one or more options to achieve their goals effortlessly. Many common elements such as drop-down menus, list boxes, checkboxes, and radio button groups are typical examples of list UI design.</p>
 
                         <div class="w-full mt-4">
@@ -301,7 +304,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Promotion/Helper Box</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Promotion/Helper Box</h3>
                         <p class="text-gray-400 font-light">Lists in web/mobile app UI design are galleries of text, images, or card options that can help users choose one or more options to achieve their goals effortlessly. Many common elements such as drop-down menus, list boxes, checkboxes, and radio button groups are typical examples of list UI design.</p>
 
                         <div class="w-full mt-4">
@@ -311,11 +314,11 @@
                 </div>
             </div>
 
-            <!-- Promotion/Helper Box -->
+            <!-- Articles -->
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Articles</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Articles</h3>
                         <p class="text-gray-400 font-light">Aritcle page is the collection of article of similar type, segregated by categories.</p>
 
                         <div class="w-full mt-4">
@@ -336,8 +339,8 @@
     <div class="flex flex-col gap-8 px-4">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8 lg:w-3/5 lg:m-auto lg:px-0">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8 lg:w-3/5 lg:m-auto lg:px-0">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">UI Designs/Screens</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -350,7 +353,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Screen 1 - </h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 1 - </h3>
                         <p class="text-gray-400 font-light">Metric is quantitative data that you collect & analyze and, hopefully, make better decisions based on this analysis.</p>
 
                         <div class="w-full mt-4">
@@ -364,7 +367,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Screen 2 - </h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 2 - </h3>
                         <p class="text-gray-400 font-light">Data tables display information in a grid-like format of rows and columns. They organize information in a way that's easy to scan so that users can look for patterns and develop insights from data.</p>
 
                         <div class="w-full mt-4">
@@ -378,7 +381,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Screen 3 - </h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 3 - </h3>
                         <p class="text-gray-400 font-light">Side navigation lets users navigate the entire content of a product or a section. These can be used for a single level or a multi-level navigation.</p>
 
                         <div class="w-full mt-4">
@@ -392,7 +395,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Screen 4 - </h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 4 - </h3>
                         <p class="text-gray-400 font-light">Filters provide a set of controls to reduce items in a collection based on attributes the user is interested in (e.g., filtering items by creation date). Filters can provide the following functionality: A list of interesting attributes common to items in a collection, and possible values to filter by.</p>
 
                         <div class="w-full mt-4">
@@ -406,7 +409,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Screen 5 - </h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Screen 5 - </h3>
                         <p class="text-gray-400 font-light">Lists in web/mobile app UI design are galleries of text, images, or card options that can help users choose one or more options to achieve their goals effortlessly. Many common elements such as drop-down menus, list boxes, checkboxes, and radio button groups are typical examples of list UI design.</p>
 
                         <div class="w-full mt-4">
@@ -483,7 +486,7 @@
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8 border-t-2 border-gray-800">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest in my work!</p>
-            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="#" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="./images/general/Résumé_SumitNikhare.pdf" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
