--- a/ux-animation.html
+++ b/ux-animation.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>sumit.design</title>
+    <title>UI Animation</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
 
     <meta charset="UTF-8">
@@ -83,7 +83,7 @@
     <div class="flex flex-col justify-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <div>
             <h1 class="text-3xl font-bold">UI Animation</h1>
-            <h2 class="text-lg text-gray-400 mt-4">Enhancing Clarit y and Flow Through Micro-Interactions</h2>
+            <h2 class="text-lg text-gray-400 mt-4">Enhancing Clarity and Flow Through Micro-Interactions</h2>
         </div>
         
         <div class="lg:w-5/5 mt-4 lg:mx-auto">
@@ -115,7 +115,7 @@
             <div class="flex flex-col items-center w-full">
                 <img src="./images/chip2/icons/industry.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Industry</p>
-                <p class="font-bold text-center mt-2">Mobile Micro Ineraction</p>
+                <p class="font-bold text-center mt-2">Mobile Micro Interaction</p>
             </div>
 
             <div class="flex flex-col items-center w-full">
@@ -132,15 +132,15 @@
     <!-- Role & Responsibilities -->
     <div class="flex flex-col gap-12 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col gap-8 justify-center items-center">
-            <div class="flex flex-col gap-2 items-center">
-                <p class="text-3xl font-bold">Roles and Responsibilities</p>
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
+                <p class="text-2xl font-bold">Roles and Responsibilities</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">From ideation to implementation, I led the design and motion strategy for interactive transitions, microinteractions, and storytelling animations—ensuring they elevated both usability and visual delight without compromising performance.</p>
+            <p class="text-gray-400">From ideation to implementation, I led the design and motion strategy for interactive transitions, microinteractions, and storytelling animations—ensuring they elevated both usability and visual delight without compromising performance.</p>
 
-            <div class="flex flex-wrap gap-2 items-center text-center justify-center">
+            <div class="flex flex-wrap gap-2 text-center">
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Micro-interaction Design</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Motion for Usability</span>
                 <span class="py-4 px-8 bg-gray-800 rounded-full">Prototype Animation</span>
@@ -155,12 +155,12 @@
     <!-- Problem Statement -->
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Problem Statement</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
-            <p class="text-gray-400 text-center">In many digital portfolios and modern web experiences, static transitions and abrupt content changes can lead to disjointed user journeys—especially when navigating between sections, viewing media, or interacting with featured content. Users often struggle to maintain context when shifting between views or lose engagement due to lack of visual feedback. The challenge was to design and implement smooth, meaningful UX animations that not only enhance aesthetic appeal but also improve clarity, flow, and interactivity across the user interface—while remaining lightweight and performance-friendly across devices.</p>
+            <p class="text-gray-400">In many digital portfolios and modern web experiences, static transitions and abrupt content changes can lead to disjointed user journeys—especially when navigating between sections, viewing media, or interacting with featured content. Users often struggle to maintain context when shifting between views or lose engagement due to lack of visual feedback. The challenge was to design and implement smooth, meaningful UX animations that not only enhance aesthetic appeal but also improve clarity, flow, and interactivity across the user interface—while remaining lightweight and performance-friendly across devices.</p>
         </div>
     </div>
 
@@ -170,8 +170,8 @@
     <div class="flex flex-col gap-8 px-4">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8 lg:w-3/5 lg:m-auto lg:px-0">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8 lg:w-3/5 lg:m-auto lg:px-0">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Animations Display</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
@@ -204,7 +204,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 1 - Hover Effect & Click Feedback </h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Animation 1 - Hover Effect & Click Feedback </h3>
                         <p class="text-gray-400 font-light mt-3">This animation enhances interactivity and visual feedback on desktop screens by adding a smooth hover effect to key UI elements such as buttons, cards, and navigation links.</p>
 
                         <div>
@@ -244,7 +244,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 2: List to Project Details Transition</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Animation 2: List to Project Details Transition</h3>
 
                         <p class="text-gray-400 font-light mt-3">This animation showcases a fluid transition from a list of projects to a detailed view of a selected item, enhancing spatial continuity and reducing context-switching friction.</p>
 
@@ -284,7 +284,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 3: Expandable Sections with Smooth Transitions</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Animation 3: Expandable Sections with Smooth Transitions</h3>
 
                         <p class="text-gray-400 font-light mt-3">This animation showcases an interactive transition between a list of projects and individual project detail views within a web or mobile interface.</p>
 
@@ -333,7 +333,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 4: Seamless View-to-Story Transition with Auto-Close</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Animation 4: Seamless View-to-Story Transition with Auto-Close</h3>
 
                         <p class="text-gray-400 font-light mt-3">This animation showcases a smooth transition from a main view into a story-like detail view, followed by an automatic return to the original screen once the story completes.</p>
 
@@ -374,7 +374,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 5: Full-Screen Image Viewer with Download Action</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Animation 5: Full-Screen Image Viewer with Download Action</h3>
 
                         <p class="text-gray-400 font-light mt-3">This animation demonstrates a full-screen image viewer that enhances media engagement by offering a dedicated download option within the viewer.</p>
 
@@ -417,7 +417,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 6</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Animation 6</h3>
                         <p class="text-gray-400 font-light mt-3">The hero animation introduces website elements with smooth, staggered transitions that guide the user’s attention in a visually engaging manner. As the page loads, key components like the headline, subtext, CTA buttons, and visual illustrations appear sequentially with fade-ins, slide-ins, or scale effects. This animation not only creates a polished first impression but also helps establish a visual hierarchy, ensuring users focus on the most important content first. It adds a sense of depth and energy to the hero section, making the landing experience feel dynamic, intentional, and thoughtfully crafted.</p>
 
                         <div class="w-full mt-4">
@@ -444,15 +444,15 @@
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
         <!-- Section Header -->
-        <div class="flex flex-col items-center gap-8">
-            <div class="flex flex-col gap-2 items-center">
+        <div class="flex flex-col gap-8">
+            <div class="flex flex-col gap-2">
                 <p class="text-2xl font-bold">Conclusion</p>
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400 text-center">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
+            <p class="text-gray-400">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
 
-            <p class="text-gray-400 text-center">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
+            <p class="text-gray-400">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
 
         </div>
     </div>
@@ -522,7 +522,7 @@
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8 border-t-2 border-gray-800">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest in my work!</p>
-            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="#" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="./images/general/Résumé_SumitNikhare.pdf" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
